<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimin_10"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/margin_10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/recordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp"
            android:weightSum="100"
            tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:padding="@dimen/dimen5"
            android:gravity="center"
            android:layout_weight="35"
            tools:ignore="MissingConstraints">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_person_black_24dp"
                app:civ_border_color="#FF000000"
                app:civ_border_width="@dimen/redius"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:layout_weight="75">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_18sp"
                    android:layout_margin="@dimen/dimen5"
                    android:text="@string/txt_id"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/gray"
                    android:textSize="@dimen/textsize_18sp"
                    android:layout_margin="@dimen/dimen5"
                    android:id="@+id/txt_id"
                     />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_18sp"
                    android:layout_margin="@dimen/dimen5"
                    android:text="@string/txt_fname"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    android:background="@color/gray"
                    android:textSize="@dimen/textsize_18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:id="@+id/txt_fname"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_18sp"
                    android:layout_margin="@dimen/dimen5"
                    android:text="@string/txt_lname"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/gray"
                    android:textSize="@dimen/textsize_18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:id="@+id/txt_lname"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsize_18sp"
                    android:layout_margin="@dimen/dimen5"
                    android:text="@string/txt_email"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:background="@color/gray"
                    android:textSize="@dimen/textsize_18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:id="@+id/txt_email"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>